# KT

./: .gitignore
kt_ai/AI_foundation_tutorial/: AI_foundation_syllabus.docx  LICENSE  LLM-lesson-plan.docx  README.md  requirements.txt
kt_ai/AI_foundation_tutorial/1_AX_trend/: survey-ai-dev-exp.url
kt_ai/AI_foundation_tutorial/2_ML_basic/: 1_colab-env.ipynb  2_basic_numpy.ipynb  3_scikit_learn.ipynb  dev-env.docx
kt_ai/AI_foundation_tutorial/3_DL_foundation/: 1_data_keras_torch.ipynb  2_spiral_dataset_classification.ipynb  3_scratch_NN.ipynb  4_calc_nn_layers.xlsx  5_cnn_keras_torch.ipynb  6_clustering_keras.ipynb  7_AlexNet.ipynb  8_data_augmentation.ipynb  9_AI_sine_train_interence.ipynb  spiral.csv
kt_ai/AI_foundation_tutorial/4_NLP/: hf1-token.ipynb  hf1_token.py  hf2_token_emb.ipynb  hf2_token_emb.py  hf3_add_token.ipynb  hf3_add_token.py  hf4-ner.py  hf4_ner.ipynb  hf5-sentiment.ipynb  hf5-sentiment.py  hf6_similar_word.ipynb  hf6_similar_word.py
kt_ai/AI_foundation_tutorial/5_transformer/: papers-sota.url  transform-nlp.py  transform_nlp.ipynb
kt_ai/AI_foundation_tutorial/6_LLM_agent_vibe/5_ollama/: app.py  install.bat  ollama-gemma3-4b.url  ollama-library.url  pyproject.toml  rag.py  requirements.txt
kt_ai/AI_foundation_tutorial/7_service/: model_quantized.onnx  onnx_example.py  requirements.txt
kt_ai/AI_foundation_tutorial/8_AX_reference/: differential-calculus.url
kt_crack/: README.md
kt_crack/app/: build.gradle
kt_crack/server/: build.gradle
kt_project-1/documents/: 1. 2025년 신규_고도화_SW규모산정(FP)_신기준_적용_v1.xlsx  가이드 기반 기획서 작성 예시.docx
(+413 files in other folders)
