[tool.poetry]
name = "Local LLM"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
pypdf = "^3.17.1"
streamlit = "^1.29.0"
streamlit-chat = "^0.1.1"
langchain = "^0.0.343"
fastembed = "^0.1.1"
openai = "^1.3.6"
langchainhub = "^0.1.14"
chromadb = "^0.4.18"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
